# guaViewer

./: .gitignore  Cargo.toml  README.md  README_zh.md
guaviewer/: Cargo.toml  build.rs  resources.rc
guaviewer/src/: app_run.rs  lib.rs  main.rs  model.rs
guaviewer/src/app/: app_run.rs  mod.rs  model.rs
guaviewer/ui/: app.slint
