[package]
name = "guaviewer"
version = "0.5.0"
edition = "2024"
build = "build.rs"

[lib]
name = "guaviewer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "GuaViewer"
path = "src/main.rs"

[dependencies]
# fontdb = "0.23.0"
resvg = "0.45.1"
# slint = "1.14.1"
# Ensure the backend feature matches your Slint version
slint = { version = "1.14.1", features = ["backend-android-activity-06"] }
tcptdx = {path = "../tcptdx"}
tiny-skia = "0.11.4"
usvg = { version = "0.45.1", features = ["text"] }

[build-dependencies]
slint-build = "1.14.1"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.6"

# cargo-apk metadata
[package.metadata.android]
package = "com.azurewood.guaviewer"
label = "guaViewer"
android_version = 36
target_sdk_version = 36
min_sdk_version = 26

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
